syntax = "proto3";

package grpc.qhat.user;

import "google/protobuf/struct.proto";
import "grpc/qhat/user/message.proto";

service UserService {
  rpc createUser(CreateRequest) returns (CreateResponse) {}
}